# curry-frontend

./: .gitignore  .gitlab-ci.yml  .stylish-haskell.yaml  CHANGELOG.md  LIESMICH  Makefile  README.md  cabal.project  curry-frontend.cabal  overview.md  stack.yaml
.github/workflows/: main.yml
app/: Main.hs
data/: currysource.css
debian/: changelog  control  copyright  curry-frontend.install  curry-frontend.manpages  rules  watch
debian/man/: curry-frontend.1
debian/source/: lintian-overrides
debian/upstream/: metadata
src/: Checks.hs  CompilerEnv.hs  CompilerOpts.hs  CondCompile.hs  CurryBuilder.hs  CurryDeps.hs  Exports.hs  Generators.hs  Imports.hs  Interfaces.hs  Modules.hs  TokenStream.hs  Transformations.hs
src/Base/: AnnotExpr.hs  CurryKinds.hs  CurryTypes.hs  Expr.hs  KindSubst.hs  Kinds.hs  Linearity.hs  Messages.hs  NestEnv.hs  PrettyKinds.hs  PrettyTypes.hs  Subst.hs  TopEnv.hs  TypeExpansion.hs  TypeSubst.hs  Types.hs  Typing.hs  Utils.hs
src/Checks/: CaseModeCheck.hs  DeriveCheck.hs  DeterminismCheck.hs  ExportCheck.hs  ExtensionCheck.hs  ImportSyntaxCheck.hs  ImpredCheck.hs  InstanceCheck.hs  InterfaceCheck.hs  InterfaceSyntaxCheck.hs  KindCheck.hs  PrecCheck.hs  SyntaxCheck.hs  TypeCheck.hs  TypeSyntaxCheck.hs  WarnCheck.hs
src/Curry/: FlatCurry.hs  Syntax.hs
src/Curry/AbstractCurry/: Files.hs  Type.hs
src/Curry/Base/: Ident.hs  LLParseComb.hs  LexComb.hs  Message.hs  Monad.hs  Position.hs  Pretty.hs  QuickFix.hs  Span.hs  SpanInfo.hs  TextEdit.hs
src/Curry/CondCompile/: Parser.hs  Transform.hs  Type.hs
src/Curry/Files/: Filenames.hs  PathUtils.hs  Unlit.hs
src/Curry/FlatCurry/: Files.hs  Goodies.hs  InterfaceEquivalence.hs  Pretty.hs  Type.hs  Typeable.hs
src/Curry/FlatCurry/Annotated/: Goodies.hs  Type.hs
src/Curry/FlatCurry/Typed/: Goodies.hs  Type.hs
src/Curry/Frontend/: Checks.hs  CompilerEnv.hs  CompilerOpts.hs  CondCompile.hs  CurryBuilder.hs  CurryDeps.hs  Exports.hs  Generators.hs  IL.hs  Imports.hs  Interfaces.hs  Modules.hs  TokenStream.hs  Transformations.hs
src/Curry/Frontend/Base/: AnnotExpr.hs  Expr.hs  KindSubst.hs  Kinds.hs  Messages.hs  NestEnv.hs  SCC.hs  Subst.hs  TopEnv.hs  TypeExpansion.hs  TypeSubst.hs  Types.hs  Typing.hs  Utils.hs
src/Curry/Frontend/Checks/: CaseModeCheck.hs  DeriveCheck.hs  DeterminismCheck.hs  ExportCheck.hs  ExtensionCheck.hs  ImportSyntaxCheck.hs  InstanceCheck.hs  InterfaceCheck.hs  InterfaceSyntaxCheck.hs  KindCheck.hs  PrecCheck.hs  SyntaxCheck.hs  TypeCheck.hs  TypeSyntaxCheck.hs  WarnCheck.hs
src/Curry/Frontend/Env/: Class.hs  Determinism.hs  Instance.hs  Interface.hs  ModuleAlias.hs  OpPrec.hs  Type.hs  TypeConstructor.hs  Value.hs
src/Curry/Frontend/Files/: FrontendPath.hs
src/Curry/Frontend/Generators/: GenAbstractCurry.hs  GenAnnotatedFlatCurry.hs  GenFlatCurry.hs  GenTypedFlatCurry.hs
src/Curry/Frontend/Html/: CurryHtml.hs  SyntaxColoring.hs
src/Curry/Frontend/IL/: Pretty.hs  ShowModule.hs  Type.hs  Typing.hs
src/Curry/Frontend/Transformations/: CaseCompletion.hs  CurryToIL.hs  Derive.hs  Desugar.hs  Dictionary.hs  Lift.hs  Newtypes.hs  Optimize.hs  Qual.hs  Simplify.hs
src/Curry/Syntax/: Extension.hs  InterfaceEquivalence.hs  Lexer.hs  Parser.hs  Pretty.hs  ShowModule.hs  Type.hs  Utils.hs
src/Env/: Class.hs  Determinism.hs  Instance.hs  OpPrec.hs  Type.hs  TypeConstructor.hs  Value.hs
src/Files/: Embed.hs
src/Generators/: GenAbstractCurry.hs  GenAnnotatedFlatCurry.hs  GenFlatCurry.hs  GenTypeAnnotatedFlatCurry.hs  GenTypedFlatCurry.hs
src/Html/: CurryHtml.hs  SyntaxColoring.hs
src/IL/: Pretty.hs  ShowModule.hs  Type.hs  Typing.hs
src/Transformations/: CaseCompletion.hs  CurryToIL.hs  Derive.hs  Desugar.hs  Dictionary.hs  Lift.hs  Newtypes.hs  Qual.hs  Simplify.hs
test/: TestFrontend.hs
test/fail/: AmbiguousTypeVariable.curry  ClassHiddenFail.curry  DataFail.curry  DetSigExport.curry  DetSigFail.curry  DetSigNoExt.curry  DetTypes.curry  DetTypesMoreThanOne.curry  EscapingTypeVariable.curry  FD_Inference.curry  FD_TestSpec.curry  FD_TypeError.curry  FD_TypeError2.curry  HaskellRecordsFail.curry  ImpredDollar.curry  ImpredPoly.curry  ImpredPolyUnify.curry  IncompatibleTypes.curry  MPTCAmbiguousTypeVar.curry  MPTCDeriving.curry  MPTCFlexibleContext.curry  MPTCInstanceOverlap.curry  MPTCInstanceTermination.curry  MPTCInvalidMethodType.curry  MPTCMissingInstance.curry  MPTCMissingSuperClassInstance.curry  MPTCNoExtension.curry  MPTCSuperClassCycle.curry  MPTCWrongClassArity.curry  MPTCWrongKind.curry  MPTC_BoundVar.curry  MPTC_BoundVar2.curry  MPTC_CovCond.curry  MPTC_MultipleVars.curry  MissingLabelInUpdate.curry  MissingLabelInUpdateExport.curry  ModuleLevelWerror.curry  MultipleInstances.curry  NoDefaulting.curry  Prelude.curry  (+8 more)
test/fail/CyclicImports/: A.curry  B.curry
test/pass/: ACVisibility.curry  ApLhs.curry  CaseModeTypeVarDisambiguation.curry  ChurchEncoding.curry  ChurchList.curry  ClassHiddenExport.curry  ClassHiddenPass.curry  ClassMethods.curry  DataPass.curry  Defaulting.curry  DetSigOverlap.curry  DetSigPass.curry  EmptyWhere.curry  ExplicitForAll.curry  FD_ListLike.curry  FD_ListLike2.curry  FI_Collects.curry  FP_Lifting.curry  FP_NonLinearity.curry  FlexC_ListLike.curry  FlexI_ListLike.curry  FlexI_ListLike2.curry  FunDepExample.curry  FunDepImpliesMPTC.curry  HaskellRecords.curry  HaskellRecordsPass.curry  ImportRestricted.curry  ImportRestricted2.curry  ImportRestrictedExport.curry  ImpredDollar.curry  InstanceExport.curry  LiterateExport.curry  LiterateImport.lcurry  MPTCCoercible.curry  MPTCConstrainedMethods.curry  MPTCDefaultMethodImpls.curry  MPTCDeriving.curry  MPTCFlexibleContext.curry  MPTCListLike.curry  MPTCNoExtension.curry  (+19 more)
test/pass/InstanceExport/: M.curry  N.curry  O.curry  P.curry
test/warning/: CaseModeC.curry  MPTCIncompleteInstance.curry  MPTCOrphanInstance.curry  MPTCUniqelyButNoInstance.curry  MissingFields.curry  MissingTypeImportAsVariable.curry  NDIO.curry  NoRedundant.curry  QualRedundant.curry  Redundant.curry  ShadowingImports.curry  TypeVariableShadowing.curry
util/: lex.hs  parse.hs
