cabal-version: 3.0
name:          curry-frontend
version:       3.0.0
synopsis:      Compile the functional logic language Curry to several
               intermediate formats
description:   The Curry front end consists of the executable program
               "curry-frontend".
               It is used by various backends to compile Curry programs to
               an intermediate representation.
               The code is a stripped-down version of an early version of
               the Muenster Curry Compiler
               (<http://danae.uni-muenster.de/curry/>)
               which has been extended to produce different intermediate
               representations.
               For further information, please check
               <http://curry-language.org>
category:      Language
license:       BSD-3-Clause
license-file:  LICENSE
author:        Wolfgang Lux, Martin Engelke, Bernd Brassel, Holger Siegel,
               Bjoern Peemoeller, Finn Teegen, Kai-Oliver Prott
maintainer:    fte@informatik.uni-kiel.de
homepage:      http://curry-language.org
build-type:    Simple
stability:     experimental

extra-doc-files: README.md CHANGELOG.md

data-dir:   data
data-files: currysource.css

common setup
  ghc-options:      -Wall
  other-extensions: TemplateHaskell

source-repository head
  type:     git
  location: https://git.ps.informatik.uni-kiel.de/curry/curry-frontend.git

library
  import:           setup
  default-language: Haskell2010
  hs-source-dirs:   src
  build-depends:
      base             >= 4.11  && < 4.19
    , extra           ^>= 1.8
    , transformers    ^>= 0.6
    , mtl             ^>= 2.3
    , directory       ^>= 1.3
    , filepath        ^>= 1.4
    , file-embed      ^>= 0.0
    , containers      ^>= 0.7
    , bytestring      ^>= 0.12
    , set-extra       ^>= 1.4
    , process         ^>= 1.6
    , network-uri     ^>= 2.6
    , pretty          ^>= 1.1
    , binary          ^>= 0.8
    , time            ^>= 1.9
    , parsec          ^>= 3.1
  exposed-modules:
      Base.AnnotExpr
    , Base.Expr
    , Base.KindSubst
    , Base.Kinds
    , Base.Messages
    , Base.NestEnv
    , Base.SCC
    , Base.Subst
    , Base.TopEnv
    , Base.TypeExpansion
    , Base.TypeSubst
    , Base.Types
    , Base.Typing
    , Base.Utils
    , Checks
    , Checks.CaseModeCheck
    , Checks.DeriveCheck
    , Checks.ExportCheck
    , Checks.ExtensionCheck
    , Checks.ImportSyntaxCheck
    , Checks.InstanceCheck
    , Checks.InterfaceCheck
    , Checks.InterfaceSyntaxCheck
    , Checks.KindCheck
    , Checks.PrecCheck
    , Checks.SyntaxCheck
    , Checks.TypeCheck
    , Checks.TypeSyntaxCheck
    , Checks.WarnCheck
    , Curry.AbstractCurry
    , Curry.AbstractCurry.Files
    , Curry.AbstractCurry.Type
    , Curry.Base.Ident
    , Curry.Base.LexComb
    , Curry.Base.LLParseComb
    , Curry.Base.Message
    , Curry.Base.Monad
    , Curry.Base.Position
    , Curry.Base.Pretty
    , Curry.Base.Span
    , Curry.Base.SpanInfo
    , Curry.CondCompile.Parser
    , Curry.CondCompile.Transform
    , Curry.CondCompile.Type
    , Curry.Files.Filenames
    , Curry.Files.PathUtils
    , Curry.Files.Unlit
    , Curry.FlatCurry
    , Curry.FlatCurry.Files
    , Curry.FlatCurry.Goodies
    , Curry.FlatCurry.InterfaceEquivalence
    , Curry.FlatCurry.Pretty
    , Curry.FlatCurry.Type
    , Curry.FlatCurry.Typeable
    , Curry.FlatCurry.Annotated.Goodies
    , Curry.FlatCurry.Annotated.Type
    , Curry.FlatCurry.Typed.Goodies
    , Curry.FlatCurry.Typed.Type
    , Curry.Syntax
    , Curry.Syntax.Extension
    , Curry.Syntax.InterfaceEquivalence
    , Curry.Syntax.Lexer
    , Curry.Syntax.Parser
    , Curry.Syntax.Pretty
    , Curry.Syntax.ShowModule
    , Curry.Syntax.Type
    , Curry.Syntax.Utils
    , CompilerEnv
    , CompilerOpts
    , CondCompile
    , CurryBuilder
    , CurryDeps
    , Env.Class
    , Env.Instance
    , Env.Interface
    , Env.ModuleAlias
    , Env.OpPrec
    , Env.Type
    , Env.TypeConstructor
    , Env.Value
    , Exports
    , Files.FrontendPath
    , Generators
    , Generators.GenAbstractCurry
    , Generators.GenFlatCurry
    , Generators.GenTypedFlatCurry
    , Generators.GenAnnotatedFlatCurry
    , Html.CurryHtml
    , Html.SyntaxColoring
    , IL
    , IL.Pretty
    , IL.ShowModule
    , IL.Type
    , IL.Typing
    , Imports
    , Interfaces
    , Modules
    , TokenStream
    , Transformations
    , Transformations.CaseCompletion
    , Transformations.CurryToIL
    , Transformations.Derive
    , Transformations.Desugar
    , Transformations.Dictionary
    , Transformations.Lift
    , Transformations.Newtypes
    , Transformations.Qual
    , Transformations.Simplify
    , Paths_curry_frontend
  autogen-modules:
      Paths_curry_frontend

executable curry-frontend
  hs-source-dirs:   app
  default-language: Haskell2010
  main-is:          Main.hs
  build-depends:
      base >= 4.11
    , curry-frontend

test-suite test-frontend
  type:             detailed-0.9
  hs-source-dirs:   test
  default-language: Haskell2010
  test-module:      TestFrontend
  build-depends:
      base >= 4.11
    , Cabal >= 3.0
    , containers
    , filepath
    , curry-frontend
