cabal-version: 3.0
name:          curry-frontend
version:       3.0.0
synopsis:      Compile the functional logic language Curry to several
               intermediate formats
description:   The Curry front end consists of the executable program
               "curry-frontend".
               It is used by various backends to compile Curry programs to
               an intermediate representation.
               The code is a stripped-down version of an early version of
               the Muenster Curry Compiler
               (<http://danae.uni-muenster.de/curry/>)
               which has been extended to produce different intermediate
               representations.
               For further information, please check
               <http://curry-language.org>
category:      Language
license:       BSD-3-Clause
license-file:  LICENSE
author:        Wolfgang Lux, Martin Engelke, Bernd Brassel, Holger Siegel,
               Bjoern Peemoeller, Finn Teegen, Kai-Oliver Prott
maintainer:    fte@informatik.uni-kiel.de
homepage:      http://curry-language.org
build-type:    Simple
stability:     experimental

extra-doc-files: README.md CHANGELOG.md

data-dir:   data
data-files: currysource.css

common setup
  ghc-options:      -Wall
  other-extensions: TemplateHaskell

source-repository head
  type:     git
  location: https://git.ps.informatik.uni-kiel.de/curry/curry-frontend.git

library
  import:           setup
  default-language: Haskell2010
  hs-source-dirs:   src
  build-depends:
      base            ^>= 4.19
    , extra           ^>= 1.7
    , transformers    ^>= 0.6
    , mtl             ^>= 2.3
    , directory       ^>= 1.3
    , filepath        ^>= 1.4
    , file-embed      ^>= 0.0
    , containers      ^>= 0.6
    , bytestring      ^>= 0.12
    , set-extra       ^>= 1.4
    , process         ^>= 1.6
    , network-uri     ^>= 2.6
    , pretty          ^>= 1.1
    , binary          ^>= 0.8
    , time            ^>= 1.12
    , parsec          ^>= 3.1
  exposed-modules:
      Curry.AbstractCurry
    , Curry.AbstractCurry.Files
    , Curry.AbstractCurry.Type
    , Curry.Base.Ident
    , Curry.Base.LexComb
    , Curry.Base.LLParseComb
    , Curry.Base.Message
    , Curry.Base.Monad
    , Curry.Base.Position
    , Curry.Base.Pretty
    , Curry.Base.QuickFix
    , Curry.Base.Span
    , Curry.Base.SpanInfo
    , Curry.Base.TextEdit
    , Curry.CondCompile.Parser
    , Curry.CondCompile.Transform
    , Curry.CondCompile.Type
    , Curry.Files.Filenames
    , Curry.Files.PathUtils
    , Curry.Files.Unlit
    , Curry.FlatCurry
    , Curry.FlatCurry.Files
    , Curry.FlatCurry.Goodies
    , Curry.FlatCurry.InterfaceEquivalence
    , Curry.FlatCurry.Pretty
    , Curry.FlatCurry.Type
    , Curry.FlatCurry.Typeable
    , Curry.FlatCurry.Annotated.Goodies
    , Curry.FlatCurry.Annotated.Type
    , Curry.FlatCurry.Typed.Goodies
    , Curry.FlatCurry.Typed.Type
    , Curry.Frontend.Base.AnnotExpr
    , Curry.Frontend.Base.Expr
    , Curry.Frontend.Base.KindSubst
    , Curry.Frontend.Base.Kinds
    , Curry.Frontend.Base.Messages
    , Curry.Frontend.Base.NestEnv
    , Curry.Frontend.Base.SCC
    , Curry.Frontend.Base.Subst
    , Curry.Frontend.Base.TopEnv
    , Curry.Frontend.Base.TypeExpansion
    , Curry.Frontend.Base.TypeSubst
    , Curry.Frontend.Base.Types
    , Curry.Frontend.Base.Typing
    , Curry.Frontend.Base.Utils
    , Curry.Frontend.Checks
    , Curry.Frontend.Checks.CaseModeCheck
    , Curry.Frontend.Checks.DeriveCheck
    , Curry.Frontend.Checks.ExportCheck
    , Curry.Frontend.Checks.ExtensionCheck
    , Curry.Frontend.Checks.ImportSyntaxCheck
    , Curry.Frontend.Checks.InstanceCheck
    , Curry.Frontend.Checks.InterfaceCheck
    , Curry.Frontend.Checks.InterfaceSyntaxCheck
    , Curry.Frontend.Checks.KindCheck
    , Curry.Frontend.Checks.PrecCheck
    , Curry.Frontend.Checks.SyntaxCheck
    , Curry.Frontend.Checks.TypeCheck
    , Curry.Frontend.Checks.TypeSyntaxCheck
    , Curry.Frontend.Checks.WarnCheck
    , Curry.Frontend.CompilerEnv
    , Curry.Frontend.CompilerOpts
    , Curry.Frontend.CondCompile
    , Curry.Frontend.CurryBuilder
    , Curry.Frontend.CurryDeps
    , Curry.Frontend.Env.Class
    , Curry.Frontend.Env.Instance
    , Curry.Frontend.Env.Interface
    , Curry.Frontend.Env.ModuleAlias
    , Curry.Frontend.Env.OpPrec
    , Curry.Frontend.Env.Type
    , Curry.Frontend.Env.TypeConstructor
    , Curry.Frontend.Env.Value
    , Curry.Frontend.Exports
    , Curry.Frontend.Files.FrontendPath
    , Curry.Frontend.Generators
    , Curry.Frontend.Generators.GenAbstractCurry
    , Curry.Frontend.Generators.GenFlatCurry
    , Curry.Frontend.Generators.GenTypedFlatCurry
    , Curry.Frontend.Generators.GenAnnotatedFlatCurry
    , Curry.Frontend.Html.CurryHtml
    , Curry.Frontend.Html.SyntaxColoring
    , Curry.Frontend.IL
    , Curry.Frontend.IL.Pretty
    , Curry.Frontend.IL.ShowModule
    , Curry.Frontend.IL.Type
    , Curry.Frontend.IL.Typing
    , Curry.Frontend.Imports
    , Curry.Frontend.Interfaces
    , Curry.Frontend.Modules
    , Curry.Frontend.TokenStream
    , Curry.Frontend.Transformations
    , Curry.Frontend.Transformations.CaseCompletion
    , Curry.Frontend.Transformations.CurryToIL
    , Curry.Frontend.Transformations.Derive
    , Curry.Frontend.Transformations.Desugar
    , Curry.Frontend.Transformations.Dictionary
    , Curry.Frontend.Transformations.Lift
    , Curry.Frontend.Transformations.Newtypes
    , Curry.Frontend.Transformations.Optimize
    , Curry.Frontend.Transformations.Qual
    , Curry.Frontend.Transformations.Simplify
    , Curry.Syntax
    , Curry.Syntax.Extension
    , Curry.Syntax.InterfaceEquivalence
    , Curry.Syntax.Lexer
    , Curry.Syntax.Parser
    , Curry.Syntax.Pretty
    , Curry.Syntax.ShowModule
    , Curry.Syntax.Type
    , Curry.Syntax.Utils
    , Paths_curry_frontend
  autogen-modules:
      Paths_curry_frontend

executable curry-frontend
  hs-source-dirs:   app
  default-language: Haskell2010
  main-is:          Main.hs
  build-depends:
      base >= 4.11
    , curry-frontend

test-suite test-frontend
  type:             detailed-0.9
  hs-source-dirs:   test
  default-language: Haskell2010
  test-module:      TestFrontend
  build-depends:
      base >= 4.11
    , Cabal >= 3.0
    , containers
    , filepath
    , directory
    , curry-frontend
